<resources>
    <string name="app_name">新生导航</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="page_first">起始页</string>
    <string name="page_current">当前页</string>
    <string name="page_last">最后页</string>
    <string name="page0">第0页</string>
    <string name="page1">第1页</string>
    <string name="page2">第2页</string>
    <string name="popular">校园风情</string>
    <string name="user">接待管理</string>
    <string name="money">财务管理</string>
   <string name="dormitory">宿舍管理</string>
   <string name="back">返回</string>
   <string name="tab_settings_about">关于微信</string>
<string name="page2_text1">微信4.5</string>
<string name="schoolCard">一卡通</string>
<string name="password_card">改密与银行卡绑定</string>
    <string name="Recharge">充值与挂失</string>
    <string name="guid">新生引导</string>
    <string name="fees_Insurance">学费缴纳与保险购买</string>
    <string name="Water_bath_card">水卡洗澡卡</string>
    <string name="Dormitory">宿舍管理</string>
    <string name="daily_necessities">日常用品购买</string>
    <string name="schoolIntroduction">学校介绍</string>
    <string name="academyIntroduction">学院介绍</string>
    <string name="schoolMap">学校地图导航</string>
    <string name="cahandle">
            新生进学校找到相应的学院，登记完后，学院会安排人带领你们去相应的地方去办理一卡通
        办卡的时候需要交100块钱，此时你领的卡里面就有100块钱可用
            当然这个卡是临时卡，过段时间后学院会统一换正式卡
            办理完一卡通后，接应你的人会带你去图文信息楼一楼，那里有机子可以修改密码和绑定银行卡
            当然这都是你自愿的，建议修改密码，不然卡丢失后容易丢钱
            绑定银行卡也是自愿的，不绑定也可以，每周的星期一至星期四都有固定的时间可以去大活拿钱充卡
                当你不小心丢失一卡通后要立即挂失
                挂失的方法有两种，一种是去图文信息楼一楼的机房挂失，另一种是去校园网上自己挂失
                如果挂失期间找回你的一卡通，那是万幸，可以自己去校园网上取消挂失，不然刷不了卡
                如果未找回你的卡，请于挂失满一个星期后补办卡</string>
                <string name="feesin">
                    如果你来的时候没有交学费，接应你的人会带你去大活人工缴纳学费，只有交了学费才能选课哦
                    如果你有意愿办理保险，带领你的人会带你去固定地点办理保险</string>
                <string name="dormaintance">
                    宿舍洗澡要热水的话才能洗热水澡，想喝热水的话需要办理水卡
                        水卡洗澡卡都只需要去楼下宿管阿姨那里办理就可以了，如果卡里没钱了，可以重新办理一张
                        如果你宿舍有物品坏掉了，你可以去楼下宿管那里保修,留下你的宿舍号，保修日期即可</string>
                <string name="schooltext">\t\t\t\t\t\t\t\t江西财经大学简介\n
    \t\t江西财经大学是一所财政部、教育部、江西省人民政府共建，以经济、管理类学科为主，法、工、文、理、农、教育、哲学、历史、艺术等学科协调发展的高等财经 学府。2008年2月6日，温家宝总理与江西财大师生共度除夕，发表了重要讲话，并称赞说：“你们学校是所很好的学校”，激励着学校永葆奋斗精神，办好人民满意的教育。\n
    1、办学历史：江西财经大学的前身为1923年秋创办的江西省立商业学校,1958年成立江西财经学院，文革期间几经更名并遭停办，1978年复校，1980年成为财政部部属院校，1996年更名为江西财经大学，2000年学校管理体制由财政部主管转变为由江西省主管，2012年成为财政部、教育 部、江西省人民政府共建高校。\n
    2、办学特色：办学以来，学校秉承“信、敏、廉、毅”的校训和“敬业乐群、臻于至善”的大学精神，形成了培养具有“信敏廉毅”素质的创业型人才的办学特色。学校坚持质量立校、特色兴校、人才强校、法德治校，形成了在红土地上培育创业型人才的办学模式，走出了在欠发达地区办人民满意高校的路子，努力朝着 “特色鲜明的高水平财经大学”的发展目标迈进。\n
    3、办学条件：学校坐落英雄城南昌，东临赣江碧水，西接梅岭烟霞，北吸锦绣庐山之灵气，南纳雄伟井冈之精神。现有蛟桥园、麦庐园、枫林园、青山园4个校区。占地面积共2200余亩，建筑面积90余万平方米，馆藏各类图书491万册（含电子）。校园幽香雅静，错落有致，层重叠翠，湖光潋滟，是全国绿化300佳单位之一。\n
    4、机构设置：学校设有工商管理学院、财税与公共管理学院、会计学院、国际经贸学院、经济学院、金融学院、统计学院、信息管理学院、旅游与城市管理学院、 软件与通信工程学院（用友软件学院）、外国语学院、人文学院、法学院、艺术学院、体育学院（国防教育部）、马克思主义学院共16个教学学院，MBA学院、国际学院、职业技术学院、继续教育学院共4个管理型学院，以及1个独立学院现代经济管理学院。设有《当代财经》杂志社、江西经济发展研究院、产业经济研究院、高等教育研究所、鄱阳湖生态经济研究院、新能源技术与应用研究中心、金融管理国际研究院、江西省战略性新兴产业发展监测、预警与决策支持协同创新中心共8个独立设置科研机构；有规制与竞争研究中心、会计发展研究中心、金融发展与风险防范研究中心、产业集群与企业发展研究中心、生态文明与现代中国研究中 心共5个省重点人文社科研究基地；有鄱阳湖生态经济研究院、财税研究中心共2个江西省哲学社会科学重点研究基地；有中澳亚太资本市场、现代商务研究中心、 产业集群与企业发展研究中心、创新与战略人力资源管理研究中心、社会工作与社会管理研究中心、科技金融研究中心等与学院合署或挂靠学院的科研机构。\n
    5、学科专业：拥有应用经济学、理论经济学、管理科学与工程、工商管理、统计学共5个博士后流动站；应用经济学、理论经济学、管理科学与工程、工商管理和 统计学共5个一级博士学位授权点，28个二级博士学位授权点，16个一级硕士学位授权点，82个二级硕士学位授权点，14个专业硕士学位授权点，58个本科专业；1998年获批江西省首家MBA办学权，2009年获批江西省首家EMBA办学权；拥有1个国家重点培育学科（产业经济学）、6个国家级特色专业 （金融学、市场营销、会计学、信息管理与信息系统、财政学、法学），有3个江西省“十二五”高水平学科、7个江西省“十二五”重点学科、3个江西省“十二 五”示范性硕士点。\n
    6、教学工作：2002年和2007年，学校顺利通过教育部本科教学工作水平评估，两次均获“优秀”等次。2001年和2009年两次获得国家优秀教学成 果奖。拥有8门国家精品课程、1门国家级精品视频公开课、3门国家级双语示范教学课程、3个国家级教学团队、1个国家级实验教学示范中心、1个国家级大学 生校外实践教育基地、2个国家级人才培养创新实验区、为全国大学生创新性实验计划项目学校、大学生英语教学改革示范点项目学校和教育部大学生文化素质教育 基地，迄今我校国家质量工程项目总计29项（含教学成果奖2项），国家本科教学工程项目2项，江西省大学生创新创业园1个，拥有中央与地方共建实验室42 个，拥有省级实验示范中心达8个。学校于1994年（全国较早）实行学分制，学生可以选修双专业（学位）。2007年学校获得普通高校推荐优秀应届本科毕业生免试攻读硕士学位研究生资格。2008年学校获得优秀硕士研究生提前攻读博士学位资格。\n
    7、科研工作：学校在2013年取得国家社科基金年度项目立项25项，第16次位居江西第一，在全国高校中排名第23位，在财经类院校中排名第三。近年来，共有10项国家社科基金项目研究成果被编入《成果要报》，并送中央领导决策参考。学校教师近6年来获得教育部人文社科项目100项，在经济管理、法 学、计算机等学科领域国际一流刊物，在《中国科学》、《中国社会科学》、《新华文摘》、《经济研究》、《管理世界》、《法学研究》等国内权威刊物上发表论文600余篇，获教育部中国高校人文社会科学研究优秀成果奖，江西省人文社会科学研究优秀成果奖、江西省社会科学优秀成果奖150余项。学校现有1个江西 省工程技术研究中心、2个江西省重点实验室、1个江西省高校重点实验室。主办的《当代财经》（月刊）入选“全国三十佳社科学报”和“新闻出版署百强优秀期 刊”，“理论经济”栏目入选教育部名栏建设工程；《江西财经大学学报》（双月刊）入选“全国优秀社科学报”，两刊均为CSSCI来源期刊。学校依托学科优势、人才优势和智力优势，紧密联系江西经济社会发展实际，聚焦江西经济、社会和文化发展与建设重大现实问题，深入开展调查研究，为政府、企业和社会管理部 门提供具有重大决策参考价值的研究成果、政策建议和咨询意见，相关论文成果多次获得江西省委书记、省长等省主要领导的批示，充分发挥了我校在服务地方经济社会发展中“智囊团”与“决策库”的作用，打造服务地方的江财品牌，提升我校在服务江西经济社会发展中的影响力、贡献力与美誉度。\n
    8、师资队伍：现有教职工2185人，专任教师1564人，其中有教授257人、副教授469人；博士511人；外教38人；博士生导师92人；硕士生导师482人；国家级教学名师奖2人，享受国务院政府特殊津贴24人，全国模范教师2人，全国优秀教师10人，教育部“新世纪优秀人才支持计划”3人，全国 “百千万工程”人才2人，全国专业学位硕士教学指导委员会委员3人，江西省赣鄱英才555工程人选29人，江西省高校中青年学科带头人73人，江西省高校骨干教师44人，江西省教学名师21人。中国科学院院士王梓坤、何祚庥，中国工程院院士李京文，中国高等教育学会会长周远清，中国人民大学原校长纪宝成，南京大学党委书记洪银兴等担任我校顾问；国内外330余名著名学者、专家和企业家受聘为我校客座教授。\n
    9、招生就业：通过多年发展，形成了以本科教育和研究生教育为主体，高职教育、继续教育、留学生教育为补充的办学格局。学校面向全国30个省、直辖市、自 治区招生，其中在27个省份一本招生，近年来在江西省招生投档线和录取平均分均为全省高校第一。现有各类在籍学生4万余人，全日制在校生3万余人。全日制 本科生有2.5万人。各类研究生近5千人。就业工作保持良好态势，2012年硕士研究生、普通本科、专科初次就业率居江西省第一，其他层次均居省高校前 列。获江西省“普通高校毕业生就业工作先进集体”、“普通高校毕业生就业工作评估优秀等级”等荣誉。2010年学校被教育部评为首批“全国就业典型经验高 校50强”。2012年获得国务院表彰的“全国就业先进工作单位”称号。近五年来，中央电视台新闻联播先后4次报道学校人才培养及就业工作。\n
    10、国际办学：学校坚持开放办学，与澳大利亚国立大学、美国纽约州立大学石溪分校、英国南安普顿大学、思克莱德大学等18个国家和地区的85所高校建立了稳定的合作与交流关系。现有研究生、本科等各层次学生境外交流项目84个。1998年开始，学校先后获批中美合作培养MBA、中澳合作培养MBA等研究 生项目。2010年正式成为国际交换生组织（ISEP）中国大陆首家成员大学，自2011年起我校学生有机会进入全球42个国家和地区的300多所大学 （其中美国175所大学）进行交换学习与交流。学校获批为全国托福考点、GRE考点、ACCA考点。学校2002年成立国际学院，开办本科教学试验班，设有会计学（国际会计）、国际经济与贸易（国际商务）、金融学（国际金融）、金融学（注册金融分析师）四个专业方向，长期聘任美国、加拿大等国家知名高校的 教师授课，现有在校生2000多人，学校还在相关学院开设了会计学（ACCA方向）、国际市场营销、国际贸易等涉外专业，教学方式和资源与国际接轨，目前初步形成了“教学相长、中西合璧、外引内联、高位嫁接”的国际化办学特色。自2003年以来，有1000余名学生于在校期间分赴英国、奥地利、芬兰、荷 兰、德国、法国等国高校交换或交流学习，有300余名学生毕业后赴牛津大学、剑桥大学等排名世界前100名大学攻读硕士或博士学位。我校自1999年招收第一批来自奥地利维也纳经济大学的留学生，目前学校有30余门用英语授课的经济管理类专业课程、30余门汉语言及文化类课程、10余门有特色的经济类课程供留学生选择。我校于2013年获得“中国政府奖学金来华留学生培养”单位资格，由此我校可接收受“ 中国政府专项奖学金-支持地方政府学历生奖学金”、“ 中东欧学分生奖学金”等多项奖学金资助的来华留学生。与此同时，江西省政府也为我校提供了“ 江西省政府外国留学生奖学金”。\n
    11、党建团学工作：学校按照“保方向、凝人心、促发展”的党建工作思路，大力加强精神文明建设。学校多年坚持“国旗日日升、好事月月评、红歌年年唱”。“明德网”被评为江西省高校示范性网站。2003年和2007年两次省党建工作评估均获评“优秀”等次。\n
    学生获得大学生数学建模竞赛第一名、全球ACCA（英国特许会计师）课程统考全球第一名和大陆第一名、“CCTV杯”全国英语演讲大赛特等奖和一等奖、全 国大学生电子商务挑战赛特等奖、“用友杯”全国大学生创业设计暨ERP沙盘模拟经营大赛一等奖、博创杯大学生嵌入式大赛全国一等奖、全国大学生市场调查与 分析一等奖、全国包装设计大赛学生最高奖、“世华杯”全国股王争霸赛冠军、香港AIA国际双语求职王语文大赛冠军、全国“挑战杯”大学生课外科技作品竞赛 二等奖等荣誉，学生社团绿派社获全国“百佳学生社团”、团中央“保护母亲河”项目等荣誉，大学生网球队获批为国家高水平运动队。
    学校基本形成了以国家助学贷款为渠道、以勤工助学为手段、以奖、助学金为主导、以社会资助为补充、以困难补助为保障、以学校“奖、免、补、缓”等各项资助 为特色的“六位一体”多元化经济困难学生资助体系和长效机制，年发放各类助学金4800多万元。学校设立各类奖学金14项，年奖励总金额320万余元，单项奖学金最高8000元/年。
    12、社会声誉：学校连续19年被评为“暑期三下乡大学生社会实践全国先进单位”，先后获“全国精神文明建设先进单位”、“全国教育系统先进单位”、“全国民族团结进步模范集体”、“全国法制教育先进单位”、“全国高校艺术教育先进单位”、“全国大学生军训先进集体”、“全国五四红旗团委”、“全国模范职 工之家”、“江西省文明单位”、“江西省高校党建工作先进单位”、“江西省高校校风建设文明单位”、“江西省平安单位”、“江西省大学生思政工作先进高校”、“江西省五一劳动奖状”等荣誉称号。
    学校办学以来，已为国家培养各类人才10余万人，多数学生现已成为所在单位的业务骨干和中坚力量，甚至成为商界、政界、学界的精英。毕业生中涌现了全国工商联原副主席、用友软件董事长王文京，全国工商联原副主席、科瑞集团董事局主席郑跃文，上海建桥集团董事长周星增等大批知名企业家，国家审计署审计长刘家义，广西区党委副书记危朝安，江西省副省长谢茹、胡幼桃、姚木根，甘肃省副省长李荣灿，湖北省副省长甘荣坤,山东省人大副主任柏继民，全国工商联副主席、上海市政协副主席王志雄，福建省人大原副主任马潞生等大批优秀党政领导干部，著名经济学家、中国人民大学校长助理吴晓求，著名会计审计学家、北京国家会计学院党委书记秦荣生，著名会计学家、中山大学副校长魏明海，世界银行高级经济学家樊启淼，美国俄亥俄州立大学费舍尔商学院金融系主任、教席教授张橹等大批著名专家学者。据中国校友会网资料，学校排名2013中国造富大学排行榜第39名，中国大学杰出人文社会科学家校友榜第60名，中国大学校友捐赠排行榜第47名。近三年，《人民日报》、新华社、《光明日报》、中央电视台、《中国教育报》、《江西日报》、江西卫视 等众多中央和地方媒体对学校进行了近千次的报道。
                    
                </string>
</resources>